--- a/systemd/cloud-config.service.tmpl
+++ b/systemd/cloud-config.service.tmpl
@@ -1,6 +1,7 @@
 ## template:jinja
 [Unit]
 Description=Apply the settings specified in cloud-config
+ConditionVirtualization=yes
 After=network-online.target cloud-config.target
 After=snapd.seeded.service
 Wants=network-online.target cloud-config.target
