--- a/systemd/cloud-final.service.tmpl
+++ b/systemd/cloud-final.service.tmpl
@@ -1,6 +1,7 @@
 ## template:jinja
 [Unit]
 Description=Execute cloud user/final scripts
+ConditionVirtualization=yes
 After=network-online.target cloud-config.service rc-local.service
 {% if variant in ["ubuntu", "unknown", "debian"] %}
 After=multi-user.target
