--- a/systemd/cloud-init.service.tmpl
+++ b/systemd/cloud-init.service.tmpl
@@ -1,6 +1,7 @@
 ## template:jinja
 [Unit]
 Description=Initial cloud-init job (metadata service crawler)
+ConditionVirtualization=yes
 Wants=cloud-init-local.service
 Wants=sshd.service
 After=cloud-init-local.service
